Text align fix

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+    text-align: center;
     margin: 0px;
     width: 100%;
     height: 100%;
@@ -75,8 +76,13 @@ h1 {
     margin-bottom: 10px;
     width: fit-content;
     height: auto;
+    justify-content: center;
 
     text-shadow: 0 0 30px rgba(177, 224, 255, 0.131);
+
+    text-align: center;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 h3 {
